// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form renders inline Form with label correctly 1`] = `
<form
  class="ui-form ui-form-inline"
>
  <div
    class="ui-form-item col-sm-4"
  >
    <label>
      类型
    </label>
    <div
      class="ui-form-item-control"
    >
      <input
        class="ui-input radius"
        placeholder="请输入..."
        type="text"
      />
    </div>
  </div>
  <div
    class="ui-form-item col-sm-4"
  >
    <label>
      来源
    </label>
    <div
      class="ui-form-item-control"
    >
      <input
        class="ui-input radius"
        placeholder="请输入..."
        type="text"
      />
    </div>
  </div>
  <div
    class="ui-form-item col-sm-4"
  >
    <div
      class="ui-form-item-control"
    >
      <button
        class="ui-button radius theme-success"
        type="button"
      >
        查询
      </button>
    </div>
  </div>
</form>
`;

exports[`Form renders inline Form with required fields and help correctly 1`] = `
<form
  class="ui-form ui-form-inline"
>
  <div
    class="ui-form-item col-sm-4"
  >
    <label>
      类型
    </label>
    <div
      class="ui-form-item-control"
    >
      <input
        class="ui-input radius"
        placeholder="请输入..."
        type="text"
      />
    </div>
  </div>
  <div
    class="ui-form-item col-sm-4"
  >
    <label>
      <span
        class="ui-form-item-required"
      >
        <i
          class="ui-icon ui-icon-required theme-default"
        />
      </span>
      来源
    </label>
    <div
      class="ui-form-item-control"
    >
      <input
        class="ui-input radius"
        placeholder="请输入..."
        type="text"
      />
    </div>
  </div>
  <div
    class="ui-form-item col-sm-4"
  >
    <div
      class="ui-form-item-control"
    >
      <button
        class="ui-button radius theme-success"
        type="button"
      >
        查询
      </button>
    </div>
  </div>
</form>
`;

exports[`Form renders normal Form correctly 1`] = `
<form
  class="ui-form ui-form-horizontal"
>
  <div
    class="ui-form-item"
  >
    <label>
      账号
    </label>
    <div
      class="ui-form-item-control"
    >
      <input
        class="ui-input radius"
        placeholder="请输入..."
        type="text"
      />
    </div>
  </div>
  <div
    class="ui-form-item"
  >
    <label>
      密码
    </label>
    <div
      class="ui-form-item-control"
    >
      <input
        class="ui-input radius"
        placeholder="请输入..."
        type="text"
      />
    </div>
  </div>
  <div
    class="ui-form-item"
  >
    <div
      class="ui-form-item-control"
    >
      <button
        class="ui-button radius theme-success"
        type="button"
      >
        登录
      </button>
    </div>
  </div>
</form>
`;
